--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a {
 }
 
 a:hover {
-    box-shadow: 0px 5px 20px rgb(255, 255, 255);
-  /*transform: scale(1.1);
+  box-shadow: 0px 5px 20px rgb(255, 255, 255);
+  transform: scale(1.1);
   background-color: cornflowerblue;
 }
