--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 html,
-body {
-  background-color: #00b3c0;
-  font-family: Arial, Helvetica, sans-serif;
+body,
+.main,
+.container {
+  background-color: transparent; /* Asegura que el fondo sea transparente */
 }
 
 h1 {
